<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/btnScanM"
        android:layout_width="319dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/btnScan"
        app:layout_constraintBottom_toTopOf="@+id/btnRecetasM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_green_light" />

    <ImageButton
        android:id="@+id/btnRecetasM"
        android:layout_width="319dp"
        android:layout_height="120dp"
        android:contentDescription="@string/btnRecetas"
        app:layout_constraintBottom_toTopOf="@+id/btnPromosM"
        app:layout_constraintEnd_toEndOf="@+id/btnPromosM"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanM"
        app:srcCompat="@android:color/holo_orange_light" />

    <ImageButton
        android:id="@+id/btnPromosM"
        android:layout_width="319dp"
        android:layout_height="120dp"
        android:contentDescription="@string/btnPromos"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecetasM"
        app:srcCompat="@android:color/holo_red_light" />

    <ImageButton
        android:id="@+id/btnAbout"
        android:layout_width="319dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/btnAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPromosM"
        app:srcCompat="@android:color/holo_blue_bright" />


</androidx.constraintlayout.widget.ConstraintLayout>