<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".promoactivity"
    tools:showIn="@layout/activity_promoactivity">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="238dp"
        android:layout_height="84dp"
        android:text="@string/Verduras"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpromos" />

    <Button
        android:id="@+id/buttonpromos"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="233dp"
        android:layout_height="90dp"
        android:text="@string/frutas"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecetas" />

    <Button
        android:id="@+id/buttonRecetas"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="239dp"
        android:layout_height="74dp"
        android:text="@string/tuubica"
        app:layout_constraintBottom_toTopOf="@+id/buttonpromos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="195dp"
        android:layout_marginTop="44dp"
        android:text="@android:string/defaultMsisdnAlphaTag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>